change: Stick navbar to top of page when leaving homepage change: Place text under album images, not over to improve mobile viewing feat: No padding for albums on mobile for larger images fix: Prose settings were not applying due to trimMargin

--- a/site/custom.css
+++ b/site/custom.css
@@ -16,3 +16,28 @@
 @theme {
     --font-mono: "JetBrains Mono", monospace;
 }
+
+@utility full-bleed {
+    width: 100%;
+    grid-column: 1 / 4 !important;
+}
+
+@utility wrapper {
+    display: grid;
+    grid-template-columns: 1fr min(1024px, calc(100% - 32px)) 1fr;
+    /*grid-column-gap: 24px;*/
+    grid-row-gap: 0;
+    > * {
+        grid-column: 2;
+    }
+}
+
+@utility wrapper-wide {
+    display: grid;
+    grid-template-columns: 1fr min(1300px, calc(100% - 32px)) 1fr;
+    /*grid-column-gap: 24px;*/
+    grid-row-gap: 0;
+    > * {
+        grid-column: 2;
+    }
+}
